stats classes and tests fixed, lot of documentation done