@@ -4,7 +4,15 @@ Simple web app with rest api for manage collection of cars.
 Cars can be loaded from file through constructor in CarsService class. Format of input file must be JSON conform.   
 REST API have only get methods to display collection of cars in json format (see javadoc)
 
-### Installation
+### Installation and running 
+
+- Project build:
+
+mvn clean install
+
+- Running jar archive 
+
+java -jar --enable-preview target/app.jar
 
 Docker container can be build with command:
 
@@ -25,9 +33,8 @@ Build tool: Maven
 
 ### TODO
 
-- fix stats classes in service
-- write tests for new stats classes
-- make documentation for javadoc
+- test docker image
+- make api documentation in Postman
 
 
 
